added functionality for filters movie by genres and genres get form DB